Add some more details to about me

--- a/docroot/index.html
+++ b/docroot/index.html
@@ -28,20 +28,66 @@
 	</div>
   	<div> 
 		<h5><small>(today)</small> study compsci at <a href='http://www.tu-berlin.de'>Berlin Institute of Technology</a></h5>
+        <div><small>
+        Focus on communication networks and embedded systems. 
+        Evaluated metrics for WiFi and 3G coverage measurements: Development of a smartphone app and field experiment on the
+        university campus (Android, IEEE8021X, DHCP, IEEE80211, UMTS/EDGE). Detour into Content Centric Network by van Jacobsen (CCN) and later Software
+        Defined Networks (SDN). Embedded development based for ARM-based boards (Hardware Synthesis, ARM-Asm, C, PID-Controller).
+        Economic focus on IT Service Management (ITIL) and Entrepreneurship with focus on e-business ideas.
+        </small></div> 
 	</div>
   	<div>
 		<h5><small>(2009-2013)</small> student worker at <a href='http://www.bowl.tu-berlin.de/'>Berlin Open Wireless Lab</a></h5>
 		<div><small>
-		Development of Web-Control and Management Client-Server solution for OpenWRT based Routers, Indoor and Outdoor Testbed Maintenance and Extension (>100 routers), Maintenance and Development of OpenWRT based Distribution, System Administration (mainly XEN, KVM virtual machines, 802.1x, DHCP, Nagios), Collaboration with researchers and Bsc./Msc./PhD students.
+		Development of Web-Control and Management Client-Server solution for OpenWRT based Routers, Indoor and Outdoor Testbed Maintenance and Extension (>100 routers), 
+        Maintenance and Development of OpenWRT based Distribution, System Administration (mainly XEN, KVM virtual machines, 802.1x, DHCP, Nagios), 
+        Collaboration with researchers and Bsc./Msc./PhD students.
 		</small></div> 
 	</div>
 	<div> 
-		<h5><small>(*-2013)</small> freifunker</h5>
+		<h5><small>(2007-2013)</small> freifunker</h5>
 		<div><small>
 		Development of a monitoring, ranking system and map for the freifunk community routers (Ruby on Rails, OpenLayers).
 		Maintainer of Piratenfreifunk OpenWRT packages (Lua, OpenWRT, Shell).
 		</small></div>
 	</div>
+    <div>
+        <h5><small>(2009)</small> volunteer at national HQ of the pirate party germany</h5>
+
+    </div>
+    <div> 
+        <h5><small>(2007-2009)</small> study comp enginerring  at <a href='http://www.tu-berlin.de'>Berlin Institute of Technology</a></h5>
+    </div>
+    <div> 
+        <h5><small>(2006-2007)</small> draftee in german armed forces</h5>
+    </div>
+    <div>
+        <h5><small>(2004-2007)</small> volunteer at the youth club C.O.R.N. in Birkenwerder</h5>
+        <div><small>
+            Organization of OpenAir concerts, various cultural activities and projects.
+            System Administration (Windows, Linux, Networking, Proxies, Parental filters).
+        </small></div>
+    </div>
+    <div> 
+        <h5><small>(2004-2006)</small> Regine Hildebrandt secondary school in Birkenwerder</h5>
+        <div><small>
+        Extracurricural activies ranged from organizing discussions with local policians 
+        over creating the school-wide newspaper to development of supporting IT tools for teachers
+        (Delphi).
+        </small></div>
+    </div>
+    <div> 
+        <h5><small>(~2001)</small> work for NetCircuit GmbH in Oranienburg</h5>
+        <div><small>
+        IT Service Support. Development of a PHP-based online shop from scratch (PHP, HTML, CSS). 
+        </small></div>
+    </div>
+    <div> 
+        <h5><small>(1998-2004)</small> Marie Curie secondary school in Hohen Neuendorf</h5>
+    </div>
+    <div> 
+        <h5><small>(1992-1998)</small> Pestalozzi primary school in Birkenwerder</h5>
+    </div>
 </div>
 
 <div class="container">
@@ -64,7 +110,7 @@
 	<small>Fischer, Thorsten and H&uuml;hn, Thomas and Kuck, Robin and Merz, Ruben and Schulz-Zander, Julius and Sengul, Cigdem (2011). </small><a href='http://static.usenix.org/events/lisa11/tech/full_papers/Fischer.pdf'>Experiences with BOWL: Managing an Outdoor WiFi Network (or How to Keep Both Internet Users and Researchers Happy?</a> <small>Proceedings of the 25th Large Installation System Administration Conference (LISA '11), 287-292.</small>
   </li>
   <li> 
-	<small>Kuck, Robin (2012), </small>WiFi/3G Coverage Analysis of BOWL at the TU-Berlin campus <small>study project at BOWL (Android, IEEE8021X, DHCP, IEEE80211)</small>
+	<small>Kuck, Robin (2012), </small>WiFi/3G Coverage Analysis of BOWL at the TU-Berlin campus <small>study project at BOWL (Android, IEEE8021X, DHCP, IEEE80211, UMTS/EDGE)</small>
   </li>
 </ul>
 </div>
