Minor changes to webpages

--- a/jekyll/projects.html
+++ b/jekyll/projects.html
@@ -5,97 +5,98 @@ layout: default
 
 <div class="container">
     <div> <h5><small>(2015)</small>
-        playing around with
-        <a href='https://www.nordicsemi.com/eng/Products/Bluetooth-Smart-Bluetooth-low-energy/nRF51822'>nrf51822</a></h5>
+            playing around with
+            <a href='https://www.nordicsemi.com/eng/Products/Bluetooth-Smart-Bluetooth-low-energy/nRF51822'>nrf51822</a></h5>
         <div>
-        Playing around with the nordic nrf51822 ble module
-        on a BLE 400 development kit.
-        (ARM, BLE, C)
+            Playing around with the nordic nrf51822 ble module
+            on a BLE 400 development kit.
+            (ARM, BLE, C)
         </div>
     </div>
     <div> <h5><small>(2015)</small>
-        <a href='https://github.com/basicinside/controlsocket-example'>webserver control socket example</a></h5>
+            <a href='https://github.com/basicinside/controlsocket-example'>webserver control socket example</a></h5>
         <div>
-        This showcases the control socket usage for tornado webservers running
-        asynchonously.
-        (Python, tornado)
+            This showcases the control socket usage for tornado webservers running
+            asynchonously.
+            (Python, tornado)
         </div>
     </div>
     <div> <h5><small>(2014)</small>
-        <a href='https://github.com/basicinside/openwrt-util-packages'>utilities for OpenWRT</a></h5>
+            <a href='https://github.com/basicinside/openwrt-util-packages'>utilities for OpenWRT</a></h5>
         <div>
-        usb-ctrl - control and detect power settings for usb hubs and
-        reset usb devices. <br /> channel-switcher - periodically switch WiFi channels
-        fast and accurately timed.
-        (OpenWRT, C, USB, IEEE80211, NetLink)
+            usb-ctrl - control and detect power settings for usb hubs and
+            reset usb devices. <br /> channel-switcher - periodically switch WiFi channels
+            fast and accurately timed.
+            (OpenWRT, C, USB, IEEE80211, NetLink)
         </div>
     </div>
     <div> <h5><small>(2013-2014)</small>
-        <a href='https://github.com/basicinside/xmas-code'>xmas-tree and code challenges</a></h5>
+            <a href='https://github.com/basicinside/xmas-code'>xmas-tree and code challenges</a></h5>
         <div>
-        My xmas-tree submission in r/dailyprogrammer.
-        There is a bigger pile of submissions and code challenges
-        (dailyprogrammer,
-        <a href="https://projecteuler.net/profile/_robin.png">project euler</a>,
-        <a href="http://rosalind.info/users/_robin/">rosalind</a>)
-        in a hidden private repo. Feel free to ask me for access to it.
-        (C, Shell)
+            My xmas-tree submission in r/dailyprogrammer.
+            There is a bigger pile of submissions and code challenges
+            (dailyprogrammer,
+            <a href="https://projecteuler.net/profile/_robin.png">project euler</a>,
+            <a href="http://rosalind.info/users/_robin/">rosalind</a>)
+            in a hidden private repo. Feel free to ask me for access to it.
+            (C, Shell)
         </div>
     </div>
     <div> <h5><small>(2010-2012)</small>
-        <a href='https://github.com/basicinside/dev-minetest'>Piratenfreifunk packages for OpenWRT</a></h5>
+            <a href='https://github.com/basicinside/dev-minetest'>Piratenfreifunk packages for OpenWRT</a></h5>
         <div>
-        Maintainer of the Piratenfreifunk OpenWRT package feed and organizer of the
-        weekly development meetup. (OpenWRT, Luci, Shell, Lua)
+            Maintainer of the Piratenfreifunk OpenWRT package feed and organizer of the
+            weekly development meetup. (OpenWRT, Luci, Shell, Lua)
         </div>
     </div>
     <div> <h5><small>(2011-2012)</small>
-        <a name='heartbeatmonitor' href='https://github.com/basicinside/heartbeat-monitor'>heartbeat monitor</a></h5>
+            <a href='https://github.com/basicinside/heartbeat-monitor'>heartbeat monitor</a></h5>
         <div>
-        The successor of the <a href='#heartbeat_daemon'>heartbeat_daemon</a>.
-        A highscore platform to receive heartbeats from freifunk routers.
-        It scans for services and exposed routers to map the network in
-        addition to the heartbeats. It comes with a nice map, that allows
-        to measure distances between nodes and look at Link Quality states.
-        (Ruby on Rails, Javascript, OpenLayers, Nmap).
+            The successor of the <a href='#heartbeat_daemon'>heartbeat_daemon</a>.
+            A highscore platform to receive heartbeats from freifunk routers.
+            It scans for services and exposed routers to map the network in
+            addition to the heartbeats. It comes with a nice map, that allows
+            to measure distances between nodes and look at Link Quality states.
+            (Ruby on Rails, Javascript, OpenLayers, Nmap).
         </div>
     </div>
     <div> <h5><small>(2012)</small>
-        <a href='https://github.com/basicinside/dev-minetest'>Minetest Patches and Mods</a></h5>
+            <a href='https://github.com/basicinside/dev-minetest'>Minetest Patches and Mods</a></h5>
         <div>
-        Minetest patches and Die Hard Mod (C++, Lua).
+            Minetest patches and Die Hard Mod (C++, Lua).
         </div>
     </div>
     <div> <h5><small>(2011)</small>
-        <a href='https://github.com/basicinside/mccon'>MCCon</a></h5>
+            <a href='https://github.com/basicinside/mccon'>MCCon</a></h5>
         <div>
-        A minecraft console tool. It allows to install plugins into itself.
-        The following plugins are available: Mailbox: Send messages to players,
-        PlayerList: List all players. Teleport: Allow players to teleport themselves
-        to each other. Welcome: Display a welcome message. Whitelist: Read
-        and refresh whitelist from web page.
+            A minecraft console tool. It allows to install plugins into itself.
+            The following plugins are available: Mailbox: Send messages to players,
+            PlayerList: List all players. Teleport: Allow players to teleport themselves
+            to each other. Welcome: Display a welcome message. Whitelist: Read
+            and refresh whitelist from web page.
         </div>
     </div>
     <div> <h5><small>(2010)</small>
-        <a name='heartbeat_daemon' href='https://github.com/basicinside/heartbeat_daemon'>heartbeat daemon</a></h5>
+            <a href='https://github.com/basicinside/heartbeat_daemon'>heartbeat daemon</a></h5>
         <div>
-        The initial highscore platform to receive heartbeats from freifunk routers.
-        The newer version is the <a href='#heartbeatmonitor'>heartbeat
-        monitor</a> (Ruby on Rails, Javascript).
+            The initial highscore platform to receive heartbeats from freifunk routers.
+            The newer version is the <a href='#heartbeatmonitor'>heartbeat
+                monitor</a> (Ruby on Rails, Javascript).
         </div>
     </div>
     <div> <h5><small>(2009)</small>
-        <a href='https://github.com/basicinside/CallmonitorNotification'>Callmonitor Notification</a></h5>
+            <a href='https://github.com/basicinside/CallmonitorNotification'>Callmonitor Notification</a></h5>
         <div>
-        Connects to fritz box callmonitor and displays notifications
-        on about the caller. It can use a phone book to translate numbers
-        to names (Ruby, Linux, Shell)
+            Connects to fritz box callmonitor and displays notifications
+            on about the caller. It can use a phone book to translate numbers
+            to names (Ruby, Linux, Shell)
         </div>
     </div>
     <div> <h5><small>(2003)</small>
-        <a href='http://www.linuxforen.de/forums/showthread.php?246456-crypttar-0-2alpha&s=3c818a6d8e499e62c2b19a0750420e63'>crypttar</a></h5>
+            <a href='http://www.linuxforen.de/forums/showthread.php?246456-crypttar-0-2alpha&s=3c818a6d8e499e62c2b19a0750420e63'>crypttar</a></h5>
         <div>
-        Encode and Decode tar archives using a passphrase.
-        The code is lost. I could only find the annoucement thread. (tar, GPG)
+            Encode and Decode tar archives using a passphrase.
+            The code is lost. I could only find the annoucement thread. (tar, GPG)
         </div>
+    </div>
 </div>
